# sysadmin-openenv

./: .gitignore  .huggingfaceignore  Dockerfile  LICENSE  README.md  app.py  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
server/: app.py
